[package]
name = "aoc2019"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
aoch = { git = "https://github.com/chrismooredev/aochelper" }
itertools = "0.10.3"
num = "0.4.0"
smallvec = "1.9.0"
regex = "1.6.0"

[profile.test]
opt-level = 3

